--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ p {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
   margin: 0 auto;
   padding: 0px 20px;
   max-width: 1024px;
@@ -40,6 +43,11 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
+}
+
+.news-title h1 {
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
 }
 
 .news-title a {
@@ -173,7 +181,14 @@ footer {
 .card {
     border-radius: 5px;
     background-color: rgba(217, 247, 172, 0.35);
-    box-shadow: 2px 2px #D9F7AC;
+    box-shadow: 2px 2px 12px grey;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.card:hover {
+    box-shadow: 2px 2px 20px black;
+    transform: translateY(-5px);
 }
 
 /* Image to Card ratio */
@@ -220,11 +235,16 @@ article>p {
 form {
     display:flex;
     flex-direction:row;
-    border: 2px solid #D9F7AC;
-    box-shadow: 2px 3px #D9F7AC;
+    border: 1px solid #D9F7AC;
+    box-shadow: 2px 3px 10px grey;
     border-radius: 10px;
     padding:2px;
     flex-basis: 33%;
+    transition: transform 0.3s;
+    cursor: pointer;
+  }
+  form:hover {
+    transform: translateY(-5px);
   }
   
   input {
@@ -237,13 +257,13 @@ form {
   }
   
   button[type=submit] {
-    border: 1.5px solid #c3de9b;
-    box-shadow: 1px 1px  #D9F7AC;
+
     border-radius: 10px;    
-    color:black;
     background-color: white;
+    border: 0px solid white;
     height: 100%;
     padding: 8px;
+    cursor: pointer;
   }
 
 /* Pagination */
@@ -257,17 +277,14 @@ form {
 .page-numbers button {
 	width: 24px;
 	height: 24px;
-
 	appearance: none;
 	border-radius: 5px;
-    border: 2px solid #c3de9b;
-    background-color: #FFF;
+  border: 0px solid white;
+  background-color: #FFF;
 	outline: none;
 	cursor: pointer;
-
 	margin: 5px;
-	transition: 0.4s;
-
+	transition: 0.2s;
 	color: black;
 	font-size: 14px;
 	text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
@@ -276,10 +293,54 @@ form {
 
 .page-numbers button:hover {
 	background-color:  #D9F7AC;
+  color: #576345;
 }
 
 .page-numbers button.active {
 	background-color:  #D9F7AC;
+  color: #161911;
+}
+
+.modal {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  /* filter: drop-shadow(2px 2px 2px #D9F7AC); */
+  filter: drop-shadow(.5rem .5rem 1rem #D9F7AC);
+}
+
+.modal-content {
+  background-color: #f2f2f2;
+  margin: 15% auto;
+  padding: 20px;
+  /* border: 1px solid #888; */
+  width: 80%;
+  border-radius: 5px;
+  /* filter: drop-shadow(2px 2px 2px #D9F7AC); */
+}
+
+.modal-close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.modal-title {
+  margin-top: 0;
+}
+
+.modal-content img {
+  width: 100%;
+  border-radius: 5px;
 }
 
 /* Mobile */
@@ -300,5 +361,9 @@ form {
 @media only screen and (min-width: 961px) {
     .card { flex-basis: 24%; max-height: 300px;
         min-height: 300px; max-width: 245px;}
+    
+    .modal-content { 
+      width: 50%;
+    }
 
 }
